Carousel has finished

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="light">
-    
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -35,11 +35,59 @@
 </head>
 
 <body class="font-manrope">
-    <header>
+    <header class="container mx-auto my-20 w-5/6">
+        <!-- Navigation bar -->
+        <nav>
 
+        </nav>
+        <!-- Carousel -->
+        <div class="carousel w-full">
+            <!-- Slider 1 -->
+            <div id="slide1" class="carousel-item relative w-full">
+              <img src="images/1.png" class="w-full" />
+              <div class="hidden lg:block absolute bg-[#131318] text-[#FFFFFF] p-5 rounded-2xl w-1/2 right-6 bottom-4 right-6 bottom-10">
+                <h2 class="font-extrabold text-2xl my-2">Meet all the heroes from the field</h2>
+                <p class="font-thin text-base">Get to know the heroes shaping the field. Meet the innovators who driving positive change and making a impact.</p>
+              </div>
+              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                <a href="#slide3" class="btn btn-circle bg-slate-900 text-white">❮</a> 
+                <a href="#slide2" class="btn btn-circle bg-slate-900 text-white">❯</a>
+              </div>
+            </div>
+            <!-- Slider 2 -->
+            <div id="slide2" class="carousel-item relative w-full">
+              <img src="images/12.jpg" class="w-full rounded-3xl" />
+              <div class="hidden lg:block absolute bg-[#131318] text-[#FFFFFF] p-5 rounded-2xl w-1/2 right-6 bottom-4 right-6 bottom-10">
+                <h2 class="font-extrabold text-2xl my-2">Man wearing a green and white jersey.</h2>
+                <p class="font-thin text-base">A man donning a vibrant green and white hockey jersey, embodying team spirit and determination on the ice. A dynamic blend of style and sportsmanship.</p>
+              </div>
+              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                <a href="#slide1" class="btn btn-circle bg-slate-900 text-white">❮</a> 
+                <a href="#slide3" class="btn btn-circle bg-slate-900 text-white">❯</a>
+              </div>
+            </div>
+            <!-- Slider 3 -->
+            <div id="slide3" class="carousel-item relative w-full">
+              <img src="images/13.jpg" class="w-full rounded-3xl" />
+              <div class="hidden lg:block absolute bg-[#131318] text-[#FFFFFF] p-5 rounded-2xl w-1/2 right-6 bottom-4 right-6 bottom-10">
+                <h2 class="font-extrabold text-2xl my-2">Gold and silver trophy in an wooden surface</h2>
+                <p class="font-thin text-base">Capture the essence of achievement: a gleaming gold and silver trophy resting proudly on a polished wooden surface, symbolizing excellence and success.</p>
+              </div>
+              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                <a href="#slide2" class="btn btn-circle bg-slate-900 text-white">❮</a> 
+                <a href="#slide1" class="btn btn-circle bg-slate-900 text-white">❯</a>
+              </div>
+            </div>
+          </div>
+          <div class="flex flex-col lg:hidden bg-[#131318] text-[#FFFFFF] p-5 rounded-2xl w-full my-4">
+            <h2 class="font-extrabold text-lg my-2">Meet all the heroes from the field</h2>
+            <p class="font-thin text-sm">Get to know the heroes shaping the field. Meet the innovators who driving positive change and making a impact.</p>
+          </div>
     </header>
-    <main>
+    <main class="container mx-auto my-20 w-5/6">
+        <!-- Section 2 Start -->
         
+        <!-- Section 2 end -->
     </main>
     <footer>
 
