Section 3 is running

--- a/index.html
+++ b/index.html
@@ -44,50 +44,115 @@
         <div class="carousel w-full">
             <!-- Slider 1 -->
             <div id="slide1" class="carousel-item relative w-full">
-              <img src="images/1.png" class="w-full" />
-              <div class="hidden lg:block absolute bg-[#131318] text-[#FFFFFF] p-5 rounded-2xl w-1/2 right-6 bottom-4 right-6 bottom-10">
-                <h2 class="font-extrabold text-2xl my-2">Meet all the heroes from the field</h2>
-                <p class="font-thin text-base">Get to know the heroes shaping the field. Meet the innovators who driving positive change and making a impact.</p>
-              </div>
-              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                <a href="#slide3" class="btn btn-circle bg-slate-900 text-white">❮</a> 
-                <a href="#slide2" class="btn btn-circle bg-slate-900 text-white">❯</a>
-              </div>
+                <img src="images/1.png" class="w-full" />
+                <div
+                    class="hidden lg:block absolute bg-[#131318] text-[#FFFFFF] p-5 rounded-2xl w-1/2 right-6 bottom-4 right-6 bottom-10">
+                    <h2 class="font-extrabold text-2xl my-2">Meet all the heroes from the field</h2>
+                    <p class="font-thin text-base">Get to know the heroes shaping the field. Meet the innovators who
+                        driving positive change and making a impact.</p>
+                </div>
+                <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                    <a href="#slide3" class="btn btn-circle bg-slate-900 text-white">❮</a>
+                    <a href="#slide2" class="btn btn-circle bg-slate-900 text-white">❯</a>
+                </div>
             </div>
             <!-- Slider 2 -->
             <div id="slide2" class="carousel-item relative w-full">
-              <img src="images/12.jpg" class="w-full rounded-3xl" />
-              <div class="hidden lg:block absolute bg-[#131318] text-[#FFFFFF] p-5 rounded-2xl w-1/2 right-6 bottom-4 right-6 bottom-10">
-                <h2 class="font-extrabold text-2xl my-2">Man wearing a green and white jersey.</h2>
-                <p class="font-thin text-base">A man donning a vibrant green and white hockey jersey, embodying team spirit and determination on the ice. A dynamic blend of style and sportsmanship.</p>
-              </div>
-              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                <a href="#slide1" class="btn btn-circle bg-slate-900 text-white">❮</a> 
-                <a href="#slide3" class="btn btn-circle bg-slate-900 text-white">❯</a>
-              </div>
+                <img src="images/12.jpg" class="w-full rounded-3xl" />
+                <div
+                    class="hidden lg:block absolute bg-[#131318] text-[#FFFFFF] p-5 rounded-2xl w-1/2 right-6 bottom-4 right-6 bottom-10">
+                    <h2 class="font-extrabold text-2xl my-2">Man wearing a green and white jersey.</h2>
+                    <p class="font-thin text-base">A man donning a vibrant green and white hockey jersey, embodying team
+                        spirit and determination on the ice. A dynamic blend of style and sportsmanship.</p>
+                </div>
+                <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                    <a href="#slide1" class="btn btn-circle bg-slate-900 text-white">❮</a>
+                    <a href="#slide3" class="btn btn-circle bg-slate-900 text-white">❯</a>
+                </div>
             </div>
             <!-- Slider 3 -->
             <div id="slide3" class="carousel-item relative w-full">
-              <img src="images/13.jpg" class="w-full rounded-3xl" />
-              <div class="hidden lg:block absolute bg-[#131318] text-[#FFFFFF] p-5 rounded-2xl w-1/2 right-6 bottom-4 right-6 bottom-10">
-                <h2 class="font-extrabold text-2xl my-2">Gold and silver trophy in an wooden surface</h2>
-                <p class="font-thin text-base">Capture the essence of achievement: a gleaming gold and silver trophy resting proudly on a polished wooden surface, symbolizing excellence and success.</p>
-              </div>
-              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                <a href="#slide2" class="btn btn-circle bg-slate-900 text-white">❮</a> 
-                <a href="#slide1" class="btn btn-circle bg-slate-900 text-white">❯</a>
-              </div>
+                <img src="images/13.jpg" class="w-full rounded-3xl" />
+                <div
+                    class="hidden lg:block absolute bg-[#131318] text-[#FFFFFF] p-5 rounded-2xl w-1/2 right-6 bottom-4 right-6 bottom-10">
+                    <h2 class="font-extrabold text-2xl my-2">Gold and silver trophy in an wooden surface</h2>
+                    <p class="font-thin text-base">Capture the essence of achievement: a gleaming gold and silver trophy
+                        resting proudly on a polished wooden surface, symbolizing excellence and success.</p>
+                </div>
+                <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                    <a href="#slide2" class="btn btn-circle bg-slate-900 text-white">❮</a>
+                    <a href="#slide1" class="btn btn-circle bg-slate-900 text-white">❯</a>
+                </div>
             </div>
-          </div>
-          <div class="flex flex-col lg:hidden bg-[#131318] text-[#FFFFFF] p-5 rounded-2xl w-full my-4">
+        </div>
+        <div class="flex flex-col lg:hidden bg-[#131318] text-[#FFFFFF] p-5 rounded-2xl w-full my-4">
             <h2 class="font-extrabold text-lg my-2">Meet all the heroes from the field</h2>
-            <p class="font-thin text-sm">Get to know the heroes shaping the field. Meet the innovators who driving positive change and making a impact.</p>
-          </div>
+            <p class="font-thin text-sm">Get to know the heroes shaping the field. Meet the innovators who driving
+                positive change and making a impact.</p>
+        </div>
     </header>
     <main class="container mx-auto my-20 w-5/6">
         <!-- Section 2 Start -->
-        
+        <section>
+            <hr class="my-8 border-2 border-dashed border-[#13131833]">
+            <div class="text-center gap-6 flex flex-col">
+            <h1 class="font-extrabold text-4xl">Professional Hockeys Club</h1>
+            <p class="text-[#0d0d128a] font-medium text-base">Professional hockey clubs are elite teams participating in top-tier leagues <br>
+            worldwide, showcasing top talent in competitive hockey.</p>
+            </div>
+            <hr class="my-8 border-2 border-dashed border-[#13131833]">
+            <!-- Circular Progress -->
+            <div class="grid gap-10 grid-cols-1 lg:grid-cols-4 justify-between items-center p-12">
+                <div class="flex flex-col gap-2 justify-center items-center">
+                    <div class="radial-progress text-[#FF4240]" style="--value:87;" role="progressbar">87%</div>
+                    <h1 class="text-xl font-semibold text-[#131318] text-center">Prayer Facility</h1>
+                    <p class="font-normal text-base text-[#13131899] text-center">We have dedicated room for prayer.</p>
+                </div>
+                <div class="flex flex-col gap-2 justify-center items-center">
+                    <div class="radial-progress text-[#49D293]" style="--value:95;" role="progressbar">95%</div>
+                    <h1 class="text-xl font-semibold text-[#131318] text-center">Experienced Coach</h1>
+                    <p class="font-normal text-base text-[#13131899] text-center">Experienced coach possesses skills to provide guidance.</p>
+                </div>
+                <div class="flex flex-col gap-2 justify-center items-center">
+                    <div class="radial-progress text-[#FFB546]" style="--value:90;" role="progressbar">90%</div>
+                    <h1 class="text-xl font-semibold text-[#131318] text-center">Senior Player</h1>
+                    <p class="font-normal text-base text-[#13131899] text-center">Senior players bring skill and experience to the team.</p>
+                </div>
+                <div class="flex flex-col gap-2 justify-center items-center">
+                    <div class="radial-progress text-[#4C8DF1]" style="--value:80;" role="progressbar">80%</div>
+                    <h1 class="text-xl font-semibold text-[#131318] text-center">Training Ground</h1>
+                    <p class="font-normal text-base text-[#13131899] text-center">Our training ground is a dedicated facility for practice.</p>
+                </div>
+            </div>
+        </section>
         <!-- Section 2 end -->
+        <!-- Section 3 Start -->
+        <section>
+        <hr class="my-8 border-2 border-dashed border-[#13131833]">
+        <div class="text-center gap-6 flex flex-col">
+        <h1 class="font-extrabold text-4xl">Program Sections</h1>
+        <p class="text-[#0d0d128a] font-medium text-base">Each of these contributes to the development of a sports team, emphasizing various aspects of training, performance.</p>
+        </div>
+        <hr class="my-8 border-2 border-dashed border-[#13131833]">
+        <div>
+            <div>
+                <h3 class="text-2xl font-extrabold text-white">Junior Program</h3>
+                <p class="text-base font-medium text-white">Specialized initiative focused on the development of young athletes.</p>
+                <button class="btn bg-[#FF4240] text-white">Register Now!</button>
+            </div>
+            <div>
+                <h3 class="text-2xl font-extrabold text-white">Teenager Program</h3>
+                <p class="text-base font-medium text-white">Specialized set of activities designed to cater to the interests of teenagers.</p>
+                <button class="btn bg-[#FF4240] text-white">Register Now!</button>
+            </div>
+            <div>
+                <h3 class="text-2xl font-extrabold text-white">Professional Program</h3>
+                <p class="text-base font-medium text-white">Initiatives designed to enhance the skills, knowledge, and proficiency of individuals.</p>
+                <button class="btn bg-[#FF4240] text-white">Register Now!</button>
+            </div>
+        </div>
+       </section>
+        <!-- Section 3 End -->
     </main>
     <footer>
 
