Footer Section Done

--- a/index.html
+++ b/index.html
@@ -96,9 +96,10 @@
         <section>
             <hr class="my-8 border-2 border-dashed border-[#13131833]">
             <div class="text-center gap-6 flex flex-col">
-            <h1 class="font-extrabold text-4xl">Professional Hockeys Club</h1>
-            <p class="text-[#0d0d128a] font-medium text-base">Professional hockey clubs are elite teams participating in top-tier leagues <br>
-            worldwide, showcasing top talent in competitive hockey.</p>
+                <h1 class="font-extrabold text-4xl">Professional Hockeys Club</h1>
+                <p class="text-[#0d0d128a] font-medium text-base">Professional hockey clubs are elite teams
+                    participating in top-tier leagues <br>
+                    worldwide, showcasing top talent in competitive hockey.</p>
             </div>
             <hr class="my-8 border-2 border-dashed border-[#13131833]">
             <!-- Circular Progress -->
@@ -111,51 +112,98 @@
                 <div class="flex flex-col gap-2 justify-center items-center">
                     <div class="radial-progress text-[#49D293]" style="--value:95;" role="progressbar">95%</div>
                     <h1 class="text-xl font-semibold text-[#131318] text-center">Experienced Coach</h1>
-                    <p class="font-normal text-base text-[#13131899] text-center">Experienced coach possesses skills to provide guidance.</p>
+                    <p class="font-normal text-base text-[#13131899] text-center">Experienced coach possesses skills to
+                        provide guidance.</p>
                 </div>
                 <div class="flex flex-col gap-2 justify-center items-center">
                     <div class="radial-progress text-[#FFB546]" style="--value:90;" role="progressbar">90%</div>
                     <h1 class="text-xl font-semibold text-[#131318] text-center">Senior Player</h1>
-                    <p class="font-normal text-base text-[#13131899] text-center">Senior players bring skill and experience to the team.</p>
+                    <p class="font-normal text-base text-[#13131899] text-center">Senior players bring skill and
+                        experience to the team.</p>
                 </div>
                 <div class="flex flex-col gap-2 justify-center items-center">
                     <div class="radial-progress text-[#4C8DF1]" style="--value:80;" role="progressbar">80%</div>
                     <h1 class="text-xl font-semibold text-[#131318] text-center">Training Ground</h1>
-                    <p class="font-normal text-base text-[#13131899] text-center">Our training ground is a dedicated facility for practice.</p>
+                    <p class="font-normal text-base text-[#13131899] text-center">Our training ground is a dedicated
+                        facility for practice.</p>
                 </div>
             </div>
         </section>
         <!-- Section 2 end -->
         <!-- Section 3 Start -->
         <section>
-        <hr class="my-8 border-2 border-dashed border-[#13131833]">
-        <div class="text-center gap-6 flex flex-col">
-        <h1 class="font-extrabold text-4xl">Program Sections</h1>
-        <p class="text-[#0d0d128a] font-medium text-base">Each of these contributes to the development of a sports team, emphasizing various aspects of training, performance.</p>
-        </div>
-        <hr class="my-8 border-2 border-dashed border-[#13131833]">
-        <div>
-            <div>
-                <h3 class="text-2xl font-extrabold text-white">Junior Program</h3>
-                <p class="text-base font-medium text-white">Specialized initiative focused on the development of young athletes.</p>
-                <button class="btn bg-[#FF4240] text-white">Register Now!</button>
+            <hr class="my-8 border-2 border-dashed border-[#13131833]">
+            <div class="text-center gap-6 flex flex-col">
+                <h1 class="font-extrabold text-4xl">Program Sections</h1>
+                <p class="text-[#0d0d128a] font-medium text-base">Each of these contributes to the development of a
+                    sports team, emphasizing various aspects of training, performance.</p>
             </div>
+            <hr class="my-8 border-2 border-dashed border-[#13131833]">
             <div>
-                <h3 class="text-2xl font-extrabold text-white">Teenager Program</h3>
-                <p class="text-base font-medium text-white">Specialized set of activities designed to cater to the interests of teenagers.</p>
-                <button class="btn bg-[#FF4240] text-white">Register Now!</button>
+                <div>
+                    <h3 class="text-2xl font-extrabold text-white">Junior Program</h3>
+                    <p class="text-base font-medium text-white">Specialized initiative focused on the development of
+                        young athletes.</p>
+                    <button class="btn bg-[#FF4240] text-white">Register Now!</button>
+                </div>
+                <div>
+                    <h3 class="text-2xl font-extrabold text-white">Teenager Program</h3>
+                    <p class="text-base font-medium text-white">Specialized set of activities designed to cater to the
+                        interests of teenagers.</p>
+                    <button class="btn bg-[#FF4240] text-white">Register Now!</button>
+                </div>
+                <div>
+                    <h3 class="text-2xl font-extrabold text-white">Professional Program</h3>
+                    <p class="text-base font-medium text-white">Initiatives designed to enhance the skills, knowledge,
+                        and proficiency of individuals.</p>
+                    <button class="btn bg-[#FF4240] text-white">Register Now!</button>
+                </div>
             </div>
-            <div>
-                <h3 class="text-2xl font-extrabold text-white">Professional Program</h3>
-                <p class="text-base font-medium text-white">Initiatives designed to enhance the skills, knowledge, and proficiency of individuals.</p>
-                <button class="btn bg-[#FF4240] text-white">Register Now!</button>
-            </div>
-        </div>
-       </section>
+        </section>
         <!-- Section 3 End -->
     </main>
+    <!-- Footer Section -->
     <footer>
-
+        <footer class="footer p-10 bg-[#131318] text-neutral-content grid grid-cols-1">
+            <div class="flex flex-col gap-4 flex-1">
+                <h2 class="text-2xl font-extrabold">Get In Touch</h2>
+                <p class="text-base font-medium">Have questions or need assistance? Feel free to get in touch with us.
+                </p>
+                <div class="flex gap-2">
+                    <i class="fa-regular fa-envelope text-[#FF4240]"></i>
+                    <h6>hockeys@support.com</h6>
+                </div>
+                <div class="flex gap-2">
+                    <i class="fa-solid fa-phone text-[#FF4240]"></i>
+                    <h6>(+62) 123-321-543</h6>
+                </div>
+            </div>
+            <div class="grid grid-cols-2 lg:grid-cols-3 gap-y-12">
+                <nav class="grid grid-cols-1 gap-4">
+                    <header class="footer-title">Company</header>
+                    <a class="link link-hover">About us</a>
+                    <a class="link link-hover">Leadership</a>
+                    <a class="link link-hover">Careers</a>
+                    <a class="link link-hover">News & Article</a>
+                    <a class="link link-hover">Legal Notice</a>
+                </nav>
+                <nav class="grid grid-cols-1 gap-4">
+                    <header class="footer-title">Support</header>
+                    <a class="link link-hover">Help Center</a>
+                    <a class="link link-hover">FAQ</a>
+                    <a class="link link-hover">Ticket Support</a>
+                    <a class="link link-hover">Contact Us</a>
+                </nav>
+                <nav class="grid grid-cols-1 gap-4 mx-9">
+                    <header class="footer-title">Services</header>
+                    <a class="link link-hover">Academy</a>
+                    <a class="link link-hover">Group Lesson</a>
+                    <a class="link link-hover">Private Lesson</a>
+                    <a class="link link-hover">Hockeys for kids</a>
+                    <a class="link link-hover">Hockeys for adults</a>
+                </nav>
+            </div>
+        </footer>
     </footer>
 </body>
 
